--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 [dependencies]
 actix-web = { version = "4", features = ["openssl"] }
 openssl = { version = "0.10" }
+serde = { version = "1.0.188", features = ["derive"] }
