--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 actix-web = { version = "4", features = ["openssl"] }
 openssl = { version = "0.10" }
 serde = { version = "1.0.188", features = ["derive"] }
+derive_more = { version = "0.99.17", features = [] }
