--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ actix-web = { version = "4", features = ["openssl"] }
 openssl = { version = "0.10" }
 serde = { version = "1.0.188", features = ["derive"] }
 derive_more = { version = "0.99.17", features = [] }
+serde_json = "1"
+futures = "0.3"
