--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde = { version = "1.0.188", features = ["derive"] }
 derive_more = { version = "0.99.17", features = [] }
 serde_json = "1"
 futures = "0.3"
+futures-util = { version = "0.3.28", features = [] }
+env_logger = "0.10.0"
