--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1"
 futures = "0.3"
 futures-util = { version = "0.3.28", features = [] }
 env_logger = "0.10.0"
+actix-session = {version = "0.8",features = ["cookie-session"]}
