--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ futures = "0.3"
 futures-util = { version = "0.3.28", features = [] }
 env_logger = "0.10.0"
 actix-session = {version = "0.8",features = ["cookie-session"]}
+actix-files = "0.6.2"
