--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ futures-util = { version = "0.3.28", features = [] }
 env_logger = "0.10.0"
 actix-session = {version = "0.8",features = ["cookie-session"]}
 actix-files = "0.6.2"
+actix-web-actors = "4.2.0"
+actix = "0.13.1"
